[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "epicepoch"
authors = [
    { name="Min RK", email="benjaminrk@gmail.com" },
]
description = "Testing PEP440 Version epoch handling"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "epicepoch.__version__"}

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/minrk/epicepoch/"

[tool.tbump.version]
current = "1.0.1"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "epicepoch.py"
search = "1!{current_version}"

[[tool.tbump.after_push]]
name = "build"
cmd = "python3 -m build ."
